--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
 
 <div class="jumbotron">
+	<ul id="nav">
+  		<li><a href="index.html">Home</a></li>
+  		<li><a href="about.html">About Us</a></li>
+  		<li><a href="menu.html">The Menu</a></li>
+  		<li><a href="contact.html">Contact Us</a></li>
+	</ul>
 	<h1>restaurant.com</h1>
 	<p>Flavors covering the whole spectrum of life, from joy to enlightment.</p>
-</div>
-
-<h2>Our Menu</h2>
-
-<div class="row-fluid show-grid">
-	<div class="span6">Water</div>
-	<div class="span6">Fruit Salad</div>
 </div>
