--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,10 @@
 
 <div class="food">
 	<h1>Water</h1>
-	<p>Description here</p>
+	<p>Water is thought to be the ultimate beverage. Read this haiku, and see for yourself.</p>
+	<p>Water is so clean</p>
+	<p>Complements any cuisine</p>
+	<p>Water is pristine</p>
 </div>
 
 <div class="food">
