make page load faster, clean up code, about us align, titles

--- a/about.html
+++ b/about.html
@@ -1,49 +1,87 @@
 <!DOCTYPE html>
+<head>
+	<title>about</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="restaurant.css">
+</head>
+<body>
+	<div class="jumbotron">
+		<ul id="nav">
+	  		<li><a href="index.html">Home</a></li>
+	  		<li><a href="about.html">About Us</a></li>
+	  		<li><a href="menu.html">The Menu</a></li>
+	  		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+		<h1>About Us</h1>
+		<p id="motto">Meet the Chefs</p>
+	</div>
 
-<!-- Latest compiled and minified JavaScript -->
+	<div>
+		<!-- Riley -->
+		<p class="profile">
+			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/13804_778456352189449_2766664180666239357_n.jpg?oh=bfd125b9237e8eda987a5db40b92ea15&oe=55D324B1" alt="riley" height="300" width="290">
+		</p>
+		<div class="bio">
+			<h1 id="name">Riley</h1>
+			<br>
+			<p>Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals. <br>His favorite food? Sour gummy worms.</p>
+		</div>
+		<br>
+		<div class="bar">
+		
+		<!-- Sam -->
+		<p class="profile">
+			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xfa1/t31.0-8/10626131_10202379504424784_6652623150681512112_o.jpg" alt="your-mom" height="420" width="290">
+		</p>
+		<div class="bio">
+			<h1 id="name">Sam</h1>
+			<br><p class="bio">Mr. Samuel is a professional seafood master who has swam amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
+		</div>
+		<div class="bar">
+
+
+		<!-- Ando -->
+		<p class="profile">
+			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11182052_800637760020647_690015883826901311_n.jpg?oh=b54fcd3669831518e0d90add4356f08c&oe=560C35EF" alt="ando" height="350" width="340">
+		</p>
+		<div class="bio">
+			<h1 id="name">Ando</h1>
+			<br>
+			<p>Insert bio here</p>
+		</div>
+		<br>
+		<div class="bar">
+
+
+		<!-- Travis -->
+		<p class="profile">
+			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/11130115_889187141140152_6869836821016000452_n.jpg?oh=80abc1045773902d4991e0958a8aef4d&oe=55D42CF9" alt="travo" height="350" width="340">
+		</p>
+		<div class="bio">
+			<h1 id="name">Travis</h1>
+			<br>
+			<p>Insert bio here</p>
+		</div>
+		<br>
+		<div class="bar">
+
+		<!-- Group -->
+		<p class="profile">
+			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/10891612_10203174905469313_7302736108440632084_n.jpg?oh=b57ab827c7994d409976e2100a0bbd1a&oe=55D01F0D" alt="group" height="250" width="350">
+		</p>
+		<div class="bio">
+			<h1 id="name">The chefs greet their very excited guests!</h1>
+		</div>
+		<br>
+		<div class="bar">
+
+	</div>
+</body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" href="restaurant.css">
-
-<div class="jumbotron">
-	<ul id="nav">
-  		<li><a href="index.html">Home</a></li>
-  		<li><a href="about.html">About Us</a></li>
-  		<li><a href="menu.html">The Menu</a></li>
-  		<li><a href="contact.html">Contact Us</a></li>
-	</ul>
-	<h1>About Us</h1>
-	<p>Meet the Chefs</p>
-</div>
-
-<div id="riley">
-	<h1>Riley</h1>
-	<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/13804_778456352189449_2766664180666239357_n.jpg?oh=bfd125b9237e8eda987a5db40b92ea15&oe=55D324B1" alt="riley" height="300" width="290"></a>"
-	<br><p>Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals. <br>His favorite food? Sour gummy worms.</p>
-
-</div>
-<div id="sam">
-	<h1>Sam</h1>
-	<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xfa1/t31.0-8/10626131_10202379504424784_6652623150681512112_o.jpg" alt="sam" height="420" width="290"></a>
-	<br><p>Insert bio here</p>
-</div>
-<div id="ando">
-	<h1>Ando</h1>
-	<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11182052_800637760020647_690015883826901311_n.jpg?oh=b54fcd3669831518e0d90add4356f08c&oe=560C35EF" alt="ando" height="350" width="340"></a>
-	<br><p>Insert bio here</p>
-</div>
-<div id="travo">
-	<h1>Travis</h1>
-	<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/11130115_889187141140152_6869836821016000452_n.jpg?oh=80abc1045773902d4991e0958a8aef4d&oe=55D42CF9" alt="travo" height="350" width="340"></a>
-	<br><p>Insert bio here</p>
-</div>
-<div id="group">
-	<br><h1>The chefs greet their very excited guests!</h1><br>
-	<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/10891612_10203174905469313_7302736108440632084_n.jpg?oh=b57ab827c7994d409976e2100a0bbd1a&oe=55D01F0D" alt="group" height="250" width="350"></a><br><br>
-</div>
