--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
+<head>
+	<title>restaurant</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="restaurant.css">
+</head>
 
-<!-- Latest compiled and minified JavaScript -->
+<body>
+	<div class="jumbotron">
+		<ul id="nav">
+	  		<li><a href="index.html">Home</a></li>
+	  		<li><a href="about.html">About Us</a></li>
+	  		<li><a href="menu.html">The Menu</a></li>
+	  		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+		<h1>restaurant.com</h1>
+		<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
+	</div>
+</body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" href="restaurant.css">
-
-
-<div class="jumbotron">
-	<ul id="nav">
-  		<li><a href="index.html">Home</a></li>
-  		<li><a href="about.html">About Us</a></li>
-  		<li><a href="menu.html">The Menu</a></li>
-  		<li><a href="contact.html">Contact Us</a></li>
-	</ul>
-	<h1>restaurant.com</h1>
-	<p>Flavors covering the whole spectrum of life, from joy to enlightment.</p>
-</div>
