--- a/menu.html
+++ b/menu.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
+<head>
+	<title>menu</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="restaurant.css">
+</head>
+<body>
+	<div class="jumbotron">
+		<ul id="nav">
+	  		<li><a href="index.html">Home</a></li>
+	  		<li><a href="about.html">About Us</a></li>
+	  		<li><a href="menu.html">The Menu</a></li>
+	  		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+		<h1>Our Menu</h1>
+		<p id="motto">A wide variety of 4 delicious delicacies</p>
+	</div>
 
-<!-- Latest compiled and minified JavaScript -->
+	<div class="food">
+		<h1>Water</h1>
+		<p>Water is thought to be the ultimate beverage. Read this haiku, and see for yourself.</p>
+		<p>Water is so clean</p>
+		<p>Complements any cuisine</p>
+		<p>Water is pristine</p>
+	</div>
+
+	<div class="food">
+		<h1>Kamala Special</h1>
+		<div>This fruity dish features sweet mango, juicy pineapple, and fresh banana slices, all skewered on another banana. But wait! This banana has been hollowed out. This is symbolic of Siddhartha indulging himself in the material world, specifically with Kamala. Although Siddhartha sees her as luscious from the outside, he eventually discovers he is not being fulfilled spiritually by being with her. Thus, she is empty inside.</div>
+	</div>
+
+	<div class="food">
+		<h1>Curry</h1>
+		<p>Description here</p>
+	</div>
+
+	<div class="food">
+		<h1>Naan</h1>
+		<p>Description here</p>
+	</div>
+</body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" href="restaurant.css">
-
-<div class="jumbotron">
-	<ul id="nav">
-  		<li><a href="index.html">Home</a></li>
-  		<li><a href="about.html">About Us</a></li>
-  		<li><a href="menu.html">The Menu</a></li>
-  		<li><a href="contact.html">Contact Us</a></li>
-	</ul>
-	<h1>Our Menu</h1>
-	<p>A wide variety of 4 delicious delicacies</p>
-</div>
-
-<div class="food">
-	<h1>Water</h1>
-	<p>Water is thought to be the ultimate beverage. Read this haiku, and see for yourself.</p>
-	<p>Water is so clean</p>
-	<p>Complements any cuisine</p>
-	<p>Water is pristine</p>
-</div>
-
-<div class="food">
-	<h1>Kamala Special</h1>
-	<div>This fruity dish features sweet mango, juicy pineapple, and fresh banana slices, all skewered on another banana. But wait! This banana has been hollowed out. This is symbolic of Siddhartha indulging himself in the material world, specifically with Kamala. Although Siddhartha sees her as luscious from the outside, he eventually discovers he is not being fulfilled spiritually by being with her. Thus, she is empty inside.</div>
-</div>
-
-<div class="food">
-	<h1>Curry</h1>
-	<p>Description here</p>
-</div>
-
-<div class="food">
-	<h1>Naan</h1>
-	<p>Description here</p>
-</div>
