format about us page

--- a/about.html
+++ b/about.html
@@ -28,8 +28,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Riley</h1>
-			<br>
-			<p>Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals. <br>His favorite food? Sour gummy worms.</p>
+			<p class="bio">Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals.<br> His favorite food? Sour gummy worms.</p>
 		</div>
 		<br>
 		<div class="bar">
@@ -40,10 +39,9 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Sam</h1>
-			<br><p class="bio">Mr. Samuel is a professional seafood master who has swam amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
+			<p class="bio">Mr. Samuel is a professional seafood master who has swam amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
 		</div>
 		<div class="bar">
-
 
 		<!-- Ando -->
 		<p class="profile">
@@ -51,12 +49,10 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Ando</h1>
-			<br>
 			<p>Insert bio here</p>
 		</div>
 		<br>
 		<div class="bar">
-
 
 		<!-- Travis -->
 		<p class="profile">
@@ -64,7 +60,6 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Travis</h1>
-			<br>
 			<p>Insert bio here</p>
 		</div>
 		<br>
@@ -79,7 +74,6 @@
 		</div>
 		<br>
 		<div class="bar">
-
 	</div>
 </body>
 
