css structure, br after nav bar

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-	<div class="jumbotron">
+	<div class="jumbotron home">
 		<ul id="nav">
 	  		<li><a href="index.html">Home</a></li>
 	  		<li><a href="about.html">About Us</a></li>
 	  		<li><a href="menu.html">The Menu</a></li>
 	  		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
+		<br>
 		<h1>restaurant.com</h1>
 		<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
 	</div>
