TODO: reviews in comment, changed header color, made more bootstrapppy

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 		<p id="motto">Meet the Chefs</p>
 	</div>
 
-	<div>
+	<div class="container-fluid">
 		<!-- Riley -->
 		<p class="profile">
 			<img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/13804_778456352189449_2766664180666239357_n.jpg?oh=bfd125b9237e8eda987a5db40b92ea15&oe=55D324B1" alt="riley" height="300" width="290">
@@ -31,8 +31,8 @@
 			<h1 id="name">Riley</h1>
 			<p class="bio">Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals.<br> His favorite food? Sour gummy worms.</p>
 		</div>
-		<br>
 		<div class="bar">
+		<br>
 		
 		<!-- Sam -->
 		<p class="profile">
@@ -43,6 +43,7 @@
 			<p class="bio">Mr. Samuel is a professional seafood master who has swam amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
 		</div>
 		<div class="bar">
+		<br>
 
 		<!-- Ando -->
 		<p class="profile">
@@ -52,8 +53,8 @@
 			<h1 id="name">Ando</h1>
 			<p>Insert bio here</p>
 		</div>
-		<br>
 		<div class="bar">
+		<br>
 
 		<!-- Travis -->
 		<p class="profile">
@@ -63,8 +64,8 @@
 			<h1 id="name">Travis</h1>
 			<p>Insert bio here</p>
 		</div>
-		<br>
 		<div class="bar">
+		<br>
 
 		<!-- Group -->
 		<p class="profile">
