--- a/menu.html
+++ b/menu.html
@@ -29,21 +29,25 @@
 		<p>Complements any cuisine</p>
 		<p>Water is pristine</p>
 	</div>
+	<hr>
 
 	<div class="food">
 		<h1>Kamala Special</h1>
 		<div>This fruity dish features sweet mango, juicy pineapple, and fresh banana slices, all skewered on another banana. But wait! This banana has been hollowed out. This is symbolic of Siddhartha indulging himself in the material world, specifically with Kamala. Although Siddhartha sees her as luscious from the outside, he eventually discovers he is not being fulfilled spiritually by being with her. Thus, she is empty inside.</div>
 	</div>
-
-	<div class="food">
-		<h1>Curry</h1>
-		<p>Description here</p>
-	</div>
+	<hr>
 
 	<div class="food">
 		<h1>Naan</h1>
-		<p>Description here</p>
+		<p>We are poor so these are all the carbs we can afford. But these are all the carbs you need to survive.</p>
 	</div>
+	<hr>
+
+	<div class="food">
+		<h1>Curry</h1>
+		<p>Choose to dip your Naan in the curry, it's your choice to indulge.</p>
+	</div>
+	
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
