--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,35 @@
 </head>
 <body>
 	<div class="jumbotron">
-		<ul id="nav">
-	  		<li><a href="index.html">Home</a></li>
-	  		<li><a href="about.html">About Us</a></li>
-	  		<li><a href="menu.html">The Menu</a></li>
-	  		<li><a href="contact.html">Contact Us</a></li>
+		<ul class="navigation">
+			<li>
+				<a href="index.html">
+					<h2>Home</h2>
+					<p>restaurant.com</p>
+				</a>
+			</li>
+			<li>
+				<a href="about.html">
+					<h2>About</h2>
+					<p>About Us</p>
+				</a>
+			</li>
+			<li>
+				<a href="menu.html">
+					<h2>Menu</h2>
+					<p>Our heart</p>
+				</a>
+			</li>
+			<li>
+				<h2>Contact</h2>
+				<p>Pigeon Mail</p>
+			</li>
 		</ul>
+
+			<br>
+			<h1>restaurant.com</h1>
+			<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
+		</div>
 		<br>
 		<h1>Our Menu</h1>
 		<p id="motto">A wide variety of 4 delicious delicacies</p>
