Revert "new nav bars"
This reverts commit 077159f526a69d6d5204d2dc82d4b713c2a2811d.

--- a/contact.html
+++ b/contact.html
@@ -12,35 +12,12 @@
 
 <body>
 	<div class="jumbotron">
-		<ul class="navigation">
-			<li>
-				<a href="index.html">
-					<h2>Home</h2>
-					<p>restaurant.com</p>
-				</a>
-			</li>
-			<li>
-				<a href="about.html">
-					<h2>About</h2>
-					<p>About Us</p>
-				</a>
-			</li>
-			<li>
-				<a href="menu.html">
-					<h2>Menu</h2>
-					<p>Our heart</p>
-				</a>
-			</li>
-			<li>
-				<h2>Contact</h2>
-				<p>Pigeon Mail</p>
-			</li>
+		<ul id="nav">
+	  		<li><a href="index.html">Home</a></li>
+	  		<li><a href="about.html">About Us</a></li>
+	  		<li><a href="menu.html">The Menu</a></li>
+	  		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
-
-		<br>
-		<h1>restaurant.com</h1>
-		<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
-	</div>
 		<br>
 		<h1>Contact Us</h1>
 		<p id="motto">We're here to help, and we're on yelp</p>
