--- a/index.html
+++ b/index.html
@@ -11,40 +11,13 @@
 </head>
 
 <body>
-	<div class="jumbotron">
-	<!-- 	<ul id="nav">
+	<div class="jumbotron home">
+		<ul id="nav">
 	  		<li><a href="index.html">Home</a></li>
 	  		<li><a href="about.html">About Us</a></li>
 	  		<li><a href="menu.html">The Menu</a></li>
 	  		<li><a href="contact.html">Contact Us</a></li>
-		</ul> -->
-	<ul class="navigation">
-		<li>
-			<a href="index.html">
-				<h2>Home</h2>
-				<p>restaurant.com</p>
-			</a>
-		</li>
-		<li>
-			<a href="about.html">
-				<h2>About</h2>
-				<p>About us</p>
-			</a>
-		</li>
-		<li>
-			<a href="menu.html">
-				<h2>Menu</h2>
-				<p>Our heart</p>
-			</a>
-		</li>
-		<li>
-			<a href="contact.html">
-				<h2>Contact</h2>
-				<p>Pigeon mail</p>
-			</a>
-		</li>
-	</ul>
-
+		</ul>
 		<br>
 		<h1>restaurant.com</h1>
 		<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
