contact link for nav

--- a/about.html
+++ b/about.html
@@ -31,8 +31,10 @@
 				</a>
 			</li>
 			<li>
-				<h2>Contact</h2>
-				<p>Pigeon Mail</p>
+				<a href="contact.html">
+					<h2>Contact</h2>
+					<p>Pigeon Mail</p>
+				</a>
 			</li>
 		</ul>
 
