--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		<p id="motto">Flavors covering the whole spectrum of life, from joy to enlightment.</p>
 	</div>
 
+	<p>
+		testing
+	</p>
+
 	<!-- Reviews -->
 	<!-- <ul>
 		<li class="review">
