image to homepage

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<p class="review">"restaurant.com 10/10. restaurant.com with rice 22/7" <br>-Full Meta</p>
 	</div>
 
-
+<img id="group" src="https://lh4.googleusercontent.com/mcFhPxTmpV9rxpnnO9O6zmrHl0tQrOAner4SlZHNJCYu4BNoE_fft0qVEISsHfCUt4AQuP7uob_gJrk=w2502-h996" alt="group">
 
 </body>
 
