this might be it

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Ando</h1>
-			<p>Insert bio here</p>
+			<p class="bio">Mr. Ando appreciates food to the fullest. He eats whenever, wherever he wants, except during AP testing. He loves eating so much that after high school, he went straight to the eatery industry.</p>
 		</div>
 		<div class="bar">
 		<br>
@@ -87,7 +87,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Travis</h1>
-			<p>Insert bio here</p>
+			<p class="bio">Travo is a University of Antartica-educated food nutritionist who specializes in weight-loss training techniques learned from the penguins. and enlightening foods. He studied abroad to study with the penguins of Madagascar where he learned the art of watering holes, which is why he is an expert in water. He's not a big fan of fast foods but would be indifferent about joining you in a fast any week of the year!</p>
 		</div>
 		<div class="bar">
 		<br>
