--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<p class="review">"This will never go out of style." <br>-Tswizzle</p>
 	</div>
 	<div id="rev3">
-		<p class="review">"test post please ignore." <br>-qgyh2</p>
+		<p class="review">"I am Groot." <br>-Groot</p>
 		<p class="review">"The chicken is so undercooked, a skilled vet could save it!" <br>-Gordon Ramsay</p>
 		<p class="review">"restaurant.com 10/10. restaurant.com with rice 22/7" <br>-Full Meta</p>
 	</div>
