--- a/menu.html
+++ b/menu.html
@@ -51,6 +51,7 @@
 		<p>Water is so clean</p>
 		<p>Complements any cuisine</p>
 		<p>Water is pristine</p>
+		<p>Water is about as basic as you can possibly get. The water we offer is exceptionally pure, mineral and salt-free. However, it takes work and energy to purify the naturally polluted water. This testifies to the effort required to remove all saltiness (bitterness) from the human body. It is free from all chemicals besides hydrogen and oxygen, just like Siddhartha is free from all desires.</p>
 	</div>
 	<hr>
 
@@ -62,13 +63,14 @@
 
 	<div class="food">
 		<h1>Naan</h1>
-		<p>We are poor so these are all the carbs we can afford. But these are all the carbs you need to survive.</p>
+		<p>The naan is a solid representation of the worldview on life that Siddhartha has. Naan itself is enough to subsist, which represents the possibility of living on solely “thinking, waiting, and fasting” as in asceticism; yet, the naan can also be dipped in curry, of which there are many varieties in India itself, from butter chicken to Tamil, not even counting curries from other cultures like Indonesian or Thai. The variety of curries represents the varieties of things that people can indulge in in life, yet the complexity of the curry also represents the complexity that comes with a life away from asceticism. However, such a life is not necessarily bad, as Siddhartha journeys with Kamala and the businessman, so feel free to dip the naan in curry. On the other hand, Siddhartha ultimately chooses life with the ferryman away from Kamala, so feel free to also eat the naan plain. 
+</p>
 	</div>
 	<hr>
 
 	<div class="food">
 		<h1>Curry</h1>
-		<p>Choose to dip your Naan in the curry, it's your choice to indulge.</p>
+		<p>Choose to dip your Naan in the curry, it's your choice to indulge. In a way, curry is like Govinda in the beginning of <i>Siddhartha</i>; just like curry almost can't go without naan, Govinda can't bear to leave Siddhartha. The rest of the description of curry can be found in the description of naan. Hurry up and order, before there's naan left.</p>
 	</div>
 	
 </body>
