--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Riley</h1>
-			<p class="bio">Riley F. Woo is a professional chef and knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals.<br> His favorite food? Sour gummy worms.</p>
+			<p class="bio">It is often said that there are 100 ways to cook an egg. Riley F. Woo is a professional chef who knows 102. He also knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals, later achieving his masters at the Hogwarts School of Witchcraft and Wizardy in Food, with an emphasis on making great food.</p>
 		</div>
 		<div class="bar">
 		<br>
@@ -65,7 +65,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Sam</h1>
-			<p class="bio">Mr. Samuel is a professional seafood master who has swam amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
+			<p class="bio">Mr. Samuel is a professional seafood master who has swum amongst the very jellyfish he domesticates in the Pacific Ocean. He has graduated with a PhD in the culinary arts from DeVry University.com</p>
 		</div>
 		<div class="bar">
 		<br>
