more update to bio lol

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		</p>
 		<div class="bio">
 			<h1 id="name">Riley</h1>
-			<p class="bio">It is often said that there are 100 ways to cook an egg. Riley F. Woo is a professional chef who knows 102. He also knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals, later achieving his masters at the Hogwarts School of Witchcraft and Wizardy in Food, with an emphasis on making great food.</p>
+			<p class="bio">It is often said that there are 100 ways to cook an egg. Riley F. Woo is a professional chef who knows 102. He also knows over 9000 ways to pickle a cabbage. He graduated <i>magna cum laude</i> from Monsters University with a degree in Monster Meals, later achieving his masters at the Hogwarts School of Witchcraft and Wizardy in Food, with an emphasis on making great eggs and cabbages, which he doesn't serve here.<br><i>If you would like to taste Mr. Woo's one hundred and first and one hundred and second way to cook an egg and his unworldly cabbage dishes, please go to his other restaurant, otherrestaurant.com</p>
 		</div>
 		<div class="bar">
 		<br>
